# co-framework

./: .gitignore  CMakeLists.txt
a1-inout/: a1-inout.S
a2-factorial/: a2-fac.S
a3a-fibonacci-calculator/: a3a-fib-main.S  a3a-fib-rec.S
a3b-fibonacci-repl/: a3b-fib-repl.S
a4-diff/: a4-diff-main.c  a4-diff.S
a4-diff/tests/test4/: expected.txt
a5-printf/: a5-printf.S
